y-hexboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: hexboard
spec:
  ports:
  - name: hexboardtcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: hexboard
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
