y-sketchpod-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
  servicegroup: sketchpod
  name: sketchpod
spec:
  ports:
  - name: sketchpodtcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: sketchpod
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
